wellesleynet/roles/k8s/files/libreddit.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: libreddit
  name: libreddit
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: libreddit
  template:
    metadata:
      labels:
        app: libreddit
    spec:
      containers:
      # I think this is v0.24.0
      - image: docker.io/spikecodes/libreddit@sha256:20d1019972d05e5d02365c2130405a31183955a235c91ec2f506ea2a801d1449
        imagePullPolicy: Always
        name: libreddit
        ports:
        - containerPort: 8080
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: libreddit
spec:
  selector:
    app: libreddit
  ports:
  - name: libreddit
    port: 8080
    protocol: TCP
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: libreddit
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/auth-url: "https://authelia.kiski.co/api/verify"
    nginx.ingress.kubernetes.io/auth-signin: "https://authelia.kiski.co"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: r.kiski.co
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: libreddit
            port:
              number: 8080
  - host: reddit.kiski.co
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: libreddit
            port:
              number: 8080
  - host: libreddit.kiski.co
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: libreddit
            port:
              number: 8080
  tls:
  - hosts:
    - r.kiski.co
    secretName: r-kiski-co-tls
  - hosts:
    - reddit.kiski.co
    secretName: reddit-kiski-co-tls
  - hosts:
    - libreddit.kiski.co
    secretName: libreddit-kiski-co-tls
